force-app/main/default/objects/ssot__CommunicationSubscriptionChannelType__dlm/ssot__CommunicationSubscriptionChannelType__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Represents the engagement channel through which you can reach a customer for a communication subscription.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Contact Consent Setup</referenceEntityGroup>
        <referenceEntityName>CommunicationSubscriptionChannelType</referenceEntityName>
        <referenceEntitySubjectArea>Privacy Consent</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>