force-app/main/default/objects/ssot__CommunicationSubscriptionChannelType__dlm/fields/ssot__EngagementChannelUsageId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelUsageId__c</fullName>
    <label>Engagement Channel Usage</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelUsageId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>