force-app/main/default/objects/ssot__CommunicationSubscriptionChannelType__dlm/fields/ssot__rel_1696932794221_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1696932794221_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommunicationSubscriptionChannelType_rel</label>
    <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
    <relationshipLabel>CommunicationSubscriptionChannelType_rel</relationshipLabel>
    <relationshipName>rel_1696932794221_end</relationshipName>
    <type>Lookup</type>
</CustomField>