force-app/main/default/objects/ssot__CommunicationSubscriptionChannelType__dlm/fields/ssot__rel_1697761157434_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761157434_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CommunicationSubscription_Id_map_Com_rel</label>
    <referenceTo>ssot__CommunicationSubscription__dlm</referenceTo>
    <relationshipLabel>CommunicationSubscription_Id_map_Com_rel</relationshipLabel>
    <relationshipName>rel_1697761157434_end</relationshipName>
    <type>Lookup</type>
</CustomField>