force-app/main/default/objects/ssot__CommunicationSubscriptionChannelType__dlm/fields/ssot__rel_1697761172800_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761172800_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementChannelType_Id_map_Communi_rel</label>
    <referenceTo>ssot__EngagementChannelType__dlm</referenceTo>
    <relationshipLabel>EngagementChannelType_Id_map_Communi_rel</relationshipLabel>
    <relationshipName>rel_1697761172800_end</relationshipName>
    <type>Lookup</type>
</CustomField>